fix to grpc-gateway
